# OhosWebrtc

./: .gitattributes  README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/ets/pages/: Index.ets
entry/src/main/resources/base/element/: string.json
ohos_webrtc/: build-profile.json5  oh-package-lock.json5  oh-package.json5
ohos_webrtc/src/main/cpp/: CMakeLists.txt  napi_init.cpp
ohos_webrtc/src/main/cpp/node-addon-api/: napi-inl.h  napi.h
ohos_webrtc/src/main/cpp/ohos_webrtc/: .clang-format  audio_processing_factory.cpp  audio_processing_factory.h  certificate.cpp  certificate.h  configuration.cpp  configuration.h  data_channel.cpp  data_channel.h  dtls_transport.cpp  dtls_transport.h  dtmf_sender.cpp  dtmf_sender.h  ice_candidate.cpp  ice_candidate.h  ice_transport.cpp  ice_transport.h  media_devices.cpp  media_devices.h  media_source.cpp  media_source.h  media_stream.cpp  media_stream.h  media_stream_track.cpp  media_stream_track.h  media_track_constraints.cpp  media_track_constraints.h  napi_module.cpp  peer_connection.cpp  peer_connection.h  peer_connection_factory.cpp  peer_connection_factory.h  rtp_parameters.cpp  rtp_parameters.h  rtp_receiver.cpp  rtp_receiver.h  rtp_sender.cpp  rtp_sender.h  rtp_transceiver.cpp  rtp_transceiver.h  (+8 more)
ohos_webrtc/src/main/cpp/ohos_webrtc/async_work/: async_worker_certificate.h  async_worker_enumerate_devices.cpp  async_worker_enumerate_devices.h  async_worker_get_display_media.cpp  async_worker_get_display_media.h  async_worker_get_stats.cpp  async_worker_get_stats.h  async_worker_get_user_media.cpp  async_worker_get_user_media.h
ohos_webrtc/src/main/cpp/ohos_webrtc/audio_device/: audio_capturer.cpp  audio_capturer.h  audio_common.h  audio_device_enumerator.cpp  audio_device_enumerator.h  audio_device_info.h  audio_input.h  audio_output.h  audio_renderer.cpp  audio_renderer.h  mixing_audio_input.cpp  mixing_audio_input.h  ohos_audio_device_module.cpp  ohos_audio_device_module.h  ohos_local_audio_source.cpp  ohos_local_audio_source.h
ohos_webrtc/src/main/cpp/ohos_webrtc/camera/: camera_capturer.cpp  camera_capturer.h  camera_device_info.cpp  camera_device_info.h  camera_enumerator.cpp  camera_enumerator.h
ohos_webrtc/src/main/cpp/ohos_webrtc/event/: event.h  event_queue.h  event_target.h
ohos_webrtc/src/main/cpp/ohos_webrtc/helper/: avcodec.h  camera.cpp  camera.h  display_manager.cpp  display_manager.h  drawing_matrix.h  error.h  native_buffer.h  native_image.h  native_window.h  pointer_wrapper.h  screen_capture.h
ohos_webrtc/src/main/cpp/ohos_webrtc/logging/: hilog_sink.cpp  hilog_sink.h  log_sink.cpp  log_sink.h  native_logging.cpp  native_logging.h
ohos_webrtc/src/main/cpp/ohos_webrtc/render/: egl_config_attributes.h  egl_context.cpp  egl_context.h  egl_env.cpp  egl_env.h  gl_drawer.cpp  gl_drawer.h  gl_shader.cpp  gl_shader.h  matrix.cpp  matrix.h  native_video_renderer.cpp  native_video_renderer.h  native_window_renderer.cpp  native_window_renderer.h  native_window_renderer_gl.cpp  native_window_renderer_gl.h  native_window_renderer_raster.cpp  native_window_renderer_raster.h  render_common.h  video_frame_drawer.cpp  video_frame_drawer.h  yuv_converter.cpp  yuv_converter.h
ohos_webrtc/src/main/cpp/ohos_webrtc/screen_capture/: screen_capture_options.cpp  screen_capture_options.h  screen_capturer.cpp  screen_capturer.h  system_audio_receiver.cpp  system_audio_receiver.h
ohos_webrtc/src/main/cpp/ohos_webrtc/user_media/: media_constraints.cpp  media_constraints.h  media_constraints_util.cpp  media_constraints_util.h
ohos_webrtc/src/main/cpp/ohos_webrtc/utils/: marcos.h
ohos_webrtc/src/main/cpp/ohos_webrtc/video/: texture_buffer.cpp  texture_buffer.h  video_capturer.h  video_frame_receiver.h  video_frame_receiver_gl.cpp  video_frame_receiver_gl.h  video_frame_receiver_native.cpp  video_frame_receiver_native.h  video_info.h  video_track_source.cpp  video_track_source.h
ohos_webrtc/src/main/cpp/ohos_webrtc/video_codec/: codec_common.h  default_video_decoder_factory.cpp  default_video_decoder_factory.h  default_video_encoder_factory.cpp  default_video_encoder_factory.h  hardware_video_decoder.cpp  hardware_video_decoder.h  hardware_video_decoder_factory.cpp  hardware_video_decoder_factory.h  hardware_video_encoder.cpp  hardware_video_encoder.h  hardware_video_encoder_factory.cpp  hardware_video_encoder_factory.h  media_codec_utils.cpp  media_codec_utils.h  software_video_decoder_factory.cpp  software_video_decoder_factory.h  software_video_encoder_factory.cpp  software_video_encoder_factory.h  video_codec_mime_type.h
ohos_webrtc/src/main/cpp/types/libohos_webrtc/: oh-package.json5  webrtc.d.ts
ohos_webrtc/src/main/ets/xcomponent/: VideoRenderController.ets
ohos_webrtc/src/ohosTest/: module.json5
